--- a/css/dev/gutenberg-editor-styles.css
+++ b/css/dev/gutenberg-editor-styles.css
@@ -538,11 +538,6 @@ pre code {
   line-height: var(--line-height-core-heading);
 }
 
-.editor-styles-wrapper .wp-block-embed,
-.gutenberg-content .wp-block-embed {
-  width: 100%;
-}
-
 .editor-styles-wrapper .wp-block-embed iframe,
 .editor-styles-wrapper .wp-block-embed video,
 .gutenberg-content .wp-block-embed iframe,
@@ -1344,11 +1339,6 @@ th {
     margin-right: var(--padding-container-horizontal);
     width: calc(100% - calc(var(--padding-container-horizontal) * 4));
   }
-}
-
-.editor-styles-wrapper .wp-block-video,
-.gutenberg-content .wp-block-video {
-  width: 100%;
 }
 
 .editor-styles-wrapper .wp-block-video video,
