--- a/sass/gutenberg/blocks/_core-video.scss
+++ b/sass/gutenberg/blocks/_core-video.scss
@@ -1,10 +1,6 @@
 // Core/video block
 .editor-styles-wrapper,
 .gutenberg-content {
-  .wp-block-video {
-    width: 100%;
-  }
-
   .wp-block-video video {
     max-width: 100%;
     width: 100%;
